Fix image overflow , button member and Install code

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -495,13 +495,18 @@ a {
 }
 .member__item-wrap {
     background: #EAF6FF;
+    overflow: hidden;   
+    border-radius: 6px;
 
 }
-.member__item {
-    border-radius: 6px;
-}
 .member__item-img {
+    display: block;
     transition: .3s;
+    border-radius: 6px;
+
+    max-width:100%;
+    height: 318px;
+    object-fit: cover;
     padding-top: 20px;
 }
 .member__item-img:hover {
@@ -528,7 +533,7 @@ a {
 .member__arrow-left, .member__arrow-right {
     display: inline-block;
     border:1px solid #575F66;
-    outline:none;
+    outline:#575F66;
     color:#575F66;
     border-radius: 50%;
     padding: 9px 14px;
@@ -537,10 +542,56 @@ a {
 .member__arrow-left:hover,.member__arrow-right:hover {
     color:#fff;
     background: #2E80CE;
+    border:1px solid #2E80CE;
     border-radius: 50%;
 }
 
 .member__action {
     text-align: center;
     margin-top: 38px;
+}
+
+/* ==Install=== */
+.install {
+    display: flex;
+    margin-top: 265px;
+    border-radius: 4px;
+    background: #2E80CE;
+    height:427px;
+}
+.install__img {
+    margin-left: 70px;
+    transform: translateY(-96px);
+    width: 284px;
+    height: 522px;
+    object-fit: cover;
+}
+.install__content {
+    margin-left: 160px;
+}
+.install__heading {
+    width: 495px;
+    font-size: 5rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 60px; /* 120% */
+    letter-spacing: -1px;
+    color:#fff;
+    margin-top: 76px;
+}
+.install__desc {
+    width: 586px;
+    color: #FFF;
+    font-size: 1.8rem;
+    font-style: normal;
+    font-weight: 300;
+    margin-top: 18px;
+    line-height: 1.67; /* 166.667% */
+}
+.install__apps {
+    margin-top: 38px;
+    display: flex;
+}
+.install__link {
+    margin-right: 28px;
 }
